Further UI improvements for the Help dialogs.

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,16 @@ hr {
   border: 1px solid #021a40;
   background-color: #ff0;
 }
+
+.modalDialogContainer h4 {
+  font-size: 1.33rem;
+  margin-top: 0.5em;
+}
+
+.dialogContent {
+  padding: 10px;
+}
+
+.dialog-btn {
+  margin-bottom: 1em;
+}
